Update welcome message in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body>
   <header>
     <h1>Joshua Idam</h1>
-    <p>Welcome to Website</p>
+    <p>Welcome To My Website</p>
   </header>
 
   <div class="container">
